# add-subs

./: .gitignore  Cargo.toml  README.md
addsubs/: Cargo.toml
addsubs/src/: main.rs
c/: addsubs.c
go/: addsubs.go
src/: main.rs
