[package]
name = "addsubs"
version = "2.1.0"
edition = "2021"


[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
main_error = "0.1.2"
