[package]
name = "addsubs"
version = "2.3.1"
edition = "2024"


[profile.release]
strip = true # Automatically strip symbols from the binary
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
main_error = "0.1.2"
thiserror = "2"
